--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todo-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://rohitmitta.github.io/todo-app",
+  "homepage": "http://rohitmitta.github.io/todo-app/",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
